--- a/frontend/src/styles/carousel.css
+++ b/frontend/src/styles/carousel.css
@@ -8,17 +8,17 @@ dialog {
   margin: auto;
   width: auto;
   height: 75%;
-  }
+}
 
 dialog::backdrop {
   background: rgba(0, 0, 0, 0.3);
 }
 
-dialog > section {
-  padding: 1em;
-  height: auto;
-  width: 100%;
-}
+/*dialog > section {*/
+/*  padding: 1em;*/
+/*  height: auto;*/
+/*  width: 100%;*/
+/*}*/
 
 dialog[open] {
   animation: zoom 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
@@ -150,7 +150,7 @@ ol, li {
   position: absolute;
   top: 0;
   right: 0;
-  bottom: 0;
+  bottom: 4rem;
   left: 0;
   display: flex;
   overflow-x: scroll;
@@ -165,48 +165,49 @@ ol, li {
   bottom: 1rem;
   flex: 0 0 100%;
   width: 100%;
-  height: 100%;
   background-color: cadetblue;
   counter-increment: item;
+  justify-content: center;
+  align-items: center;
 }
 
-.carousel__slide:before {
-  content: counter(item);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate3d(-50%,-40%,70px);
-  color: #fff;
-  font-size: 2em;
-}
+/*.carousel__slide:before {*/
+/*  content: counter(item);*/
+/*  position: absolute;*/
+/*  top: 50%;*/
+/*  left: 50%;*/
+/*  transform: translate3d(-50%, -40%, 70px);*/
+/*  color: #fff;*/
+/*  font-size: 2em;*/
+/*}*/
 
 .carousel__snapper {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
   scroll-snap-align: center;
+  z-index: 1;
 }
 
-@media (hover: hover) {
-  .carousel__snapper {
-    animation-name: tonext, snap;
-    animation-timing-function: ease;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-  }
+/*@media (hover: hover) {*/
+/*  .carousel__snapper {*/
+/*    animation-name: tonext, snap;*/
+/*    animation-timing-function: ease;*/
+/*    animation-duration: 10s;*/
+/*    animation-iteration-count: infinite;*/
+/*  }*/
 
-  .carousel__slide:last-child .carousel__snapper {
-    animation-name: tostart, snap;
-  }
-}
+/*  .carousel__slide:last-child .carousel__snapper {*/
+/*    animation-name: tostart, snap;*/
+/*  }*/
+/*}*/
 
-@media (prefers-reduced-motion: reduce) {
-  .carousel__snapper {
-    animation-name: none;
-  }
-}
+/*@media (prefers-reduced-motion: reduce) {*/
+/*  .carousel__snapper {*/
+/*    animation-name: none;*/
+/*  }*/
+/*}*/
 
 .carousel:hover .carousel__snapper,
 .carousel:focus-within .carousel__snapper {
@@ -227,7 +228,7 @@ ol, li {
 }
 
 .carousel__navigation-button {
-  display: inline-block;
+  display: flex;
   width: 1.5rem;
   height: 1.5rem;
   background-color: #333;
@@ -236,6 +237,7 @@ ol, li {
   border-radius: 50%;
   font-size: 0;
   transition: transform 0.1s;
+  content: counter(item);
 }
 
 .carousel::before,
@@ -244,7 +246,7 @@ ol, li {
 .carousel__next {
   position: absolute;
   top: 0;
-  margin-top: 37.5%;
+  margin-top: 50%;
   width: 4rem;
   height: 4rem;
   border-radius: 50%;
@@ -285,9 +287,3 @@ ol, li {
   background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
 }
 
-.formbody {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
