--- a/frontend/src/styles/carousel.css
+++ b/frontend/src/styles/carousel.css
@@ -1,289 +1,217 @@
-dialog {
-  font-family: 'helvetica', sans-serif;
-  background: #2f4f4f;
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  max-width: 50%;
-  padding: 0 1.25rem;
-  margin: auto;
-  width: auto;
-  height: 75%;
-}
-
-dialog::backdrop {
-  background: rgba(0, 0, 0, 0.3);
-}
-
-/*dialog > section {*/
-/*  padding: 1em;*/
-/*  height: auto;*/
-/*  width: 100%;*/
-/*}*/
-
-dialog[open] {
-  animation: zoom 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
-}
-
-@keyframes zoom {
-  from {
-    transform: scale(0.85);
-  }
-  to {
-    transform: scale(1);
-  }
-}
-
-dialog[open]::backdrop {
-  animation: fade 0.2s ease-out;
-}
-
-@keyframes fade {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-#form-buttons {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding: 2em;
-}
-
-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: 'helvetica', sans-serif;
-  background: var(--color-mint-500);
-  padding: 1rem;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
 @keyframes tonext {
-  75% {
-    left: 0;
-  }
-  95% {
-    left: 100%;
-  }
-  98% {
-    left: 100%;
-  }
-  99% {
-    left: 0;
-  }
+	75% {
+		left: 0;
+	}
+	95% {
+		left: 100%;
+	}
+	98% {
+		left: 100%;
+	}
+	99% {
+		left: 0;
+	}
 }
 
 @keyframes tostart {
-  75% {
-    left: 0;
-  }
-  95% {
-    left: -300%;
-  }
-  98% {
-    left: -300%;
-  }
-  99% {
-    left: 0;
-  }
+	75% {
+		left: 0;
+	}
+	95% {
+		left: -300%;
+	}
+	98% {
+		left: -300%;
+	}
+	99% {
+		left: 0;
+	}
 }
 
 @keyframes snap {
-  96% {
-    scroll-snap-align: center;
-  }
-  97% {
-    scroll-snap-align: none;
-  }
-  99% {
-    scroll-snap-align: none;
-  }
-  100% {
-    scroll-snap-align: center;
-  }
+	96% {
+		scroll-snap-align: center;
+	}
+	97% {
+		scroll-snap-align: none;
+	}
+	99% {
+		scroll-snap-align: none;
+	}
+	100% {
+		scroll-snap-align: center;
+	}
 }
 
 * {
-  box-sizing: border-box;
-  scrollbar-color: transparent transparent; /* thumb and track color */
-  scrollbar-width: none;
+	box-sizing: border-box;
+	scrollbar-color: transparent transparent; /* thumb and track color */
+	scrollbar-width: none;
 }
 
 *::-webkit-scrollbar {
-  width: 0;
+	width: 0;
 }
 
 *::-webkit-scrollbar-track {
-  background: transparent;
+	background: transparent;
 }
 
 *::-webkit-scrollbar-thumb {
-  background: transparent;
-  border: none;
+	background: transparent;
+	border: none;
 }
 
 * {
-  -ms-overflow-style: none;
+	-ms-overflow-style: none;
 }
 
-ol, li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+ol,
+li {
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 
 .carousel {
-  position: relative;
-  padding-top: 75%;
-  filter: drop-shadow(0 0 10px #0003);
-  perspective: 100px;
+	position: relative;
+	filter: drop-shadow(0 0 10px #0003);
+	perspective: 100px;
+	font-family: 'helvetica', sans-serif;
+	background: #2f4f4f;
+	border-radius: 15px;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	max-width: 50%;
+	margin: auto;
+	width: auto;
+	height: auto;
 }
 
 .carousel__viewport {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 4rem;
-  left: 0;
-  display: flex;
-  overflow-x: scroll;
-  counter-reset: item;
-  scroll-behavior: smooth;
-  scroll-snap-type: x mandatory;
+	position: absolute;
+	top: 0;
+	right: 1rem;
+	bottom: 1rem;
+	left: 1rem;
+	height: 75%;
+	width: 90%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 1rem;
+	display: flex;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	counter-reset: item;
+	scroll-behavior: smooth;
+	scroll-snap-type: x mandatory;
 }
 
 .carousel__slide {
-  position: relative;
-  top: 1rem;
-  bottom: 1rem;
-  flex: 0 0 100%;
-  width: 100%;
-  background-color: cadetblue;
-  counter-increment: item;
-  justify-content: center;
-  align-items: center;
+	position: relative;
+	top: 10%;
+	bottom: 1.5rem;
+	flex: 0 0 100%;
+	width: 100%;
+	background-color: cadetblue;
+	counter-increment: item;
+	justify-content: center;
+	align-items: center;
 }
-
-/*.carousel__slide:before {*/
-/*  content: counter(item);*/
-/*  position: absolute;*/
-/*  top: 50%;*/
-/*  left: 50%;*/
-/*  transform: translate3d(-50%, -40%, 70px);*/
-/*  color: #fff;*/
-/*  font-size: 2em;*/
-/*}*/
 
 .carousel__snapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  scroll-snap-align: center;
-  z-index: 1;
+	position: absolute;
+	top: 50%;
+	left: 0;
+	width: 100%;
+	scroll-snap-align: center;
+	z-index: 1;
 }
-
-/*@media (hover: hover) {*/
-/*  .carousel__snapper {*/
-/*    animation-name: tonext, snap;*/
-/*    animation-timing-function: ease;*/
-/*    animation-duration: 10s;*/
-/*    animation-iteration-count: infinite;*/
-/*  }*/
-
-/*  .carousel__slide:last-child .carousel__snapper {*/
-/*    animation-name: tostart, snap;*/
-/*  }*/
-/*}*/
-
-/*@media (prefers-reduced-motion: reduce) {*/
-/*  .carousel__snapper {*/
-/*    animation-name: none;*/
-/*  }*/
-/*}*/
 
 .carousel:hover .carousel__snapper,
 .carousel:focus-within .carousel__snapper {
-  animation-name: none;
+	animation-name: none;
 }
 
 .carousel__navigation {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  text-align: center;
+	position: absolute;
+	right: 0;
+	left: 0;
+	bottom: 0.25rem;
+	text-align: center;
+	width: 100%;
+	margin: auto;
 }
 
 .carousel__navigation-list,
 .carousel__navigation-item {
-  display: inline-block;
+	display: inline-block;
 }
 
 .carousel__navigation-button {
-  display: flex;
-  width: 1.5rem;
-  height: 1.5rem;
-  background-color: #333;
-  background-clip: content-box;
-  border: 0.25rem solid transparent;
-  border-radius: 50%;
-  font-size: 0;
-  transition: transform 0.1s;
-  content: counter(item);
+	display: inline-block;
+	width: 1.5rem;
+	height: 1.5rem;
+	background-color: #333;
+	background-clip: content-box;
+	border: 0.25rem solid transparent;
+	border-radius: 50%;
+	font-size: 0;
+	transition: transform 0.1s;
+	content: counter(item);
 }
 
 .carousel::before,
 .carousel::after,
 .carousel__prev,
 .carousel__next {
-  position: absolute;
-  top: 0;
-  margin-top: 50%;
-  width: 4rem;
-  height: 4rem;
-  border-radius: 50%;
-  font-size: 0;
-  outline: 0;
+	position: absolute;
+	top: 0;
+	transform: translateY(-50%);
+	margin-top: 10%;
+	z-index: 2;
+	border: 0;
+	background: red;
+	color: #fff;
+	cursor: pointer;
+	padding: 0;
+	width: 4rem;
+	height: 4rem;
+	border-radius: 50%;
+	font-size: 0;
+	outline: 0;
 }
 
 .carousel::before,
 .carousel__prev {
-  left: -0.6rem;
+	left: 1rem;
+	top: 50%;
 }
 
 .carousel::after,
 .carousel__next {
-  right: -0.6rem;
+	right: 1rem;
+	top: 50%;
 }
 
 .carousel::before,
 .carousel::after {
-  content: '';
-  z-index: 1;
-  background-color: #333;
-  background-size: 1.5rem 1.5rem;
-  background-repeat: no-repeat;
-  background-position: center center;
-  color: #fff;
-  font-size: 2.5rem;
-  line-height: 4rem;
-  text-align: center;
-  pointer-events: none;
+	content: '';
+	z-index: 1;
+	background-color: #333;
+	background-size: 1.5rem 1.5rem;
+	background-repeat: no-repeat;
+	background-position: center center;
+	color: #fff;
+	font-size: 2.5rem;
+	line-height: 4rem;
+	text-align: center;
+	pointer-events: none;
 }
 
 .carousel::before {
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
+	background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
 }
 
 .carousel::after {
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
+	background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
 }
-
